# steamos-log-submitter

./: .gitignore  .gitlab-ci.yml  API.md  Makefile  README.md  README.txt  base.cfg  base.cfg.in  crash-hook.py  kdump.sh  log-gpu-crash.py  mypy.ini  pyproject.toml  setup.cfg  steamos-log-submitter.cfg  steamos-log-submitter.service  steamos-log-submitter.timer  submit-logs.sh  submitter-load.sh
dbus/: com.steampowered.SteamOSLogSubmitter.conf  com.valvesoftware.SteamOSLogSubmitter.conf
hooks/: coredump.py  gpu.py
python/: .gitignore  crash-hook.py  log-gpu-crash.py  setup.cfg
python/steamos_log_submitter/: __init__.py  crash.py  lockfile.py  run.py  util.py
python/tests/: __init__.py  test_check_network.py  test_collect.py  (+11 more)
steamos_log_submitter/: __init__.py  cli.py  client.py  config.py  constants.py  crash.py  daemon.py  data.py  dbus.py  exceptions.py  ftraced.py  lockfile.py  logging.py  run.py  runner.py  sentry.py  steam.py  types.py  util.py
systemd/: crash-hook.sysctl  steamos-log-submitter.mount.in  steamos-log-submitter.service  steamos-log-submitter.timer  sysusers.conf  sysusers.conf.in  tmpfiles.conf  tmpfiles.conf.in  var-lib-steamos-log-submitter.mount.in
tests/: __init__.py  buildid.elf  daemon.py  dbus.py  nothing.elf  test_app_list.py  test_case.py  test_check_network.py  test_cli.py  test_client.py  test_collect.py  test_config.py  test_crash.py  test_daemon.py  test_daemon_dbus.py  test_data.py  test_dbus.py  test_default_uid.py  test_dmi_info.py  test_drop_root.py  test_ftraced.py  test_get_account_id.py  test_get_account_name.py  test_get_appid.py  test_get_build_id.py  test_get_deck_serial.py  test_get_exe_build_id.py  test_get_file_key.py  test_get_path_package.py  test_get_steam_account_id.py  test_get_steam_account_name.py  test_get_steamos_branch.py  test_helper.py  test_helper_kdump.py  test_lockfile.py  test_logging.py  test_read_file.py  test_read_journal.py  test_sentry.py  test_staging_file.py  (+3 more)
tmpfiles.d/: steamos-log-submitter.conf
udev/: 80-gpu-crash.rules  80-steamos-log-submitter.rules  steamos-log-submitter.rules
(+73 files in other folders)
