[metadata]
name = steamos_log_submitter
version = 0.0.4

[options]
install_requires =
	requests
	vdf
packages =
	steamos_log_submitter
	steamos_log_submitter.helpers
	steamos_log_submitter.hooks

[options.extras_require]
test =
	pytest
	pytest-asyncio

[options.entry_points]
console_scripts =
    steamos-log-submitter = steamos_log_submitter.cli:main

[flake8]
extend-ignore=E501
per-file-ignores =
	# VDF literals
	tests/test_get_steam_account_*.py:W191,E101,F811
	tests/test_get_deck_serial.py:W191,E101,F811
	# pytest fixtures
	tests/test_*.py:F811
	tests/**/test_*.py:F811
