[metadata]
name = steamos_log_submitter
version = attr:steamos_log_submitter.__version__
author = Vicki Pfau
author_email = vi@endrift.com
description = SteamOS log collection and submission service
license= LGPL-2.1-or-later

[options]
install_requires =
	dbus-next
	httpx
	psutil
	vdf
packages =
	steamos_log_submitter
	steamos_log_submitter.helpers
	steamos_log_submitter.hooks
python_requires = >=3.11

[options.extras_require]
pytest =
	pytest
	pytest-asyncio
mypy =
	pytest
	types-psutil

[options.entry_points]
console_scripts =
    steamos-log-submitter = steamos_log_submitter.cli:main

[flake8]
extend-ignore=E501
per-file-ignores =
	# VDF literals
	tests/test_get_steam_account_*.py:W191,E101,F811
	tests/test_get_deck_serial.py:W191,E101,F811
	tests/test_cli.py:W191,E101,F811
	# pytest fixtures
	tests/*.py:F811
	tests/**/*.py:F811
